static/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@600&display=swap');

/* body, main, footer element style rules */
body {
    display: flex;
    min-height: 100vh;
    flex-direction: column;
}

main {
    flex: 1 0 auto;
}

footer {
    margin-top: 30px;
}

/* nav style rules */
.nav-extended .nav-wrapper .brand-logo {
    bottom: 0;
    top: 0;
}

.nav-extended .nav-wrapper .brand-logo img {
    height: 64px;
}

@media (max-width: 600px) {
    .nav-extended .nav-wrapper .brand-logo img {
        height: 55px;
    }
}

/* flash messages style rule */
.flashes h4 {
    font-family: 'Nunito Sans';
}

/* signature pad style rules */

#signature-pad {
    border: 2px solid black;
    width: 100%;
}

.no-display {
    display: none;
}

.signature-img {
    border: 2px solid black;
}

/* home image style rule */
.home-image {
    max-width: 400px;
    max-height: 400px;
    margin: auto;
}

